# libxfce4windowing

./: .clang-format  .gitignore  .gitlab-ci.yml  .scan-build-false-positives  Makefile.am  NEWS  README.md  autogen.sh  configure.ac  configure.ac.in  libxfce4windowing.syms  meson.build  meson_options.txt
docs/: meson.build
docs/reference/: Makefile.am  libxfce4windowing-docs.xml  libxfce4windowing-sections.txt  libxfce4windowing.types  meson.build
docs/reference/libxfce4windowing/: Makefile.am  libxfce4windowing-docs.xml  libxfce4windowing-sections.txt  libxfce4windowing.types  meson.build
docs/reference/libxfce4windowingui/: Makefile.am  libxfce4windowingui-docs.xml  libxfce4windowingui-sections.txt  libxfce4windowingui.types  meson.build
libxfce4windowing/: Libxfce4windowing-0.0.metadata  Makefile.am  libxfce4windowing-0.pc.in  libxfce4windowing-config.c  libxfce4windowing-config.h.in  libxfce4windowing-private.c  libxfce4windowing-private.h  libxfce4windowing-x11-0.pc.in  libxfce4windowing.h  libxfce4windowing.pc.in  libxfce4windowing.symbols  meson.build  xfw-application-private.h  xfw-application-wayland.c  xfw-application-wayland.h  xfw-application-x11.c  xfw-application-x11.h  xfw-application.c  xfw-application.h  xfw-gdk-private.c  xfw-gdk-private.h  xfw-marshal.list  xfw-monitor-private.h  xfw-monitor-wayland.c  xfw-monitor-wayland.h  xfw-monitor-x11.c  xfw-monitor-x11.h  xfw-monitor.c  xfw-monitor.h  xfw-screen-private.h  xfw-screen-wayland.c  xfw-screen-wayland.h  xfw-screen-x11.c  xfw-screen-x11.h  xfw-screen.c  xfw-screen.h  xfw-seat-private.h  xfw-seat-wayland.c  xfw-seat-wayland.h  xfw-seat.c  (+40 more)
libxfce4windowing/protocols/: Makefile.am  ext-workspace-v1-20220919.xml
libxfce4windowingui/: Makefile.am  libxfce4windowingui-0.pc.in  libxfce4windowingui-config.c  libxfce4windowingui-config.h.in  libxfce4windowingui.h  libxfce4windowingui.symbols  meson.build  xfw-window-action-menu.c  xfw-window-action-menu.h  xfw-window-list-menu.c  xfw-window-list-menu.h
po/: LINGUAS  Makevars  POTFILES  POTFILES.in  ar.po  ast.po  bg.po  ca.po  cs.po  da.po  de.po  el.po  en_CA.po  en_GB.po  eo.po  es.po  et.po  fi.po  fr.po  ga.po  gl.po  he.po  hr.po  hu.po  id.po  ie.po  it.po  ja.po  ka.po  kk.po  ko.po  lo.po  lt.po  meson.build  nb.po  nl.po  oc.po  pl.po  pt.po  pt_BR.po  (+14 more)
protocols/: Makefile.am  ext-workspace-v1-20230427.xml  meson.build
scripts/: Makefile.am  xdt-gen-visibility
tests/: Makefile.am  meson.build  xfw-enum-monitors.c  xfw-enum-windows.c  xfw-enum-workspaces.c  xfw-monitor-offon.c
